@@ -3,7 +3,6 @@
 
 #include <stdint.h>
 #include <stddef.h>
-#include <time.h>
 
 /* cache features */
 enum {
