@@ -15,10 +15,12 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
+
+#include "buffer.h"
+
 #include <stdlib.h>
 #include <string.h>
 #include <errno.h>
-#include "buffer.h"
 
 struct buffer *buffer_create(size_t size)
 {
