@@ -16,12 +16,13 @@
  * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-#include <stdio.h>
-#include <sys/time.h>
+#include "cache.h"
 #include "conntrackd.h"
 #include "us-conntrack.h"
-#include "cache.h"
 #include "alarm.h"
+#include "debug.h"
+
+#include <stdio.h>
 
 static void timeout(struct alarm_list *a, void *data)
 {
