@@ -81,6 +81,7 @@ o fix harmless error condition
 o add buffer_destroy() to buffer.c
 o fix memory leaks in several error output paths
 o use size_t for buffer sizes
+o import only required C headers and put local headers on top to check
 
 version 0.9.5 (2007/07/29)
 ------------------------------
